--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
         id: export
         uses: firebelley/godot-export@v5.0.0
         with:
-          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/4.1.1/Godot_v4.1.1-stable_linux.x86_64.zip
-          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/4.1.1/Godot_v4.1.1-stable_export_templates.tpz
+          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/4.1.2/Godot_v4.1.2-stable_linux.x86_64.zip
+          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/4.1.2/Godot_v4.1.2-stable_export_templates.tpz
           relative_project_path: ./
           archive_output: true
           use_preset_export_path: true
@@ -36,11 +36,11 @@ jobs:
           itchGameId: ${{ secrets.ITCH_GAME_ID }}
           buildChannel: html5
 
-      - name: Upload windows build to itch
-        uses: KikimoraGames/itch-publish@v0.0.3
-        with:
-          butlerApiKey: ${{ secrets.BUTLER_KEY }}
-          gameData: ./build/win/win.zip
-          itchUsername: ${{ secrets.ITCH_USER_NAME }}
-          itchGameId: ${{ secrets.ITCH_GAME_ID }}
-          buildChannel: windows
+      # - name: Upload windows build to itch
+      #   uses: KikimoraGames/itch-publish@v0.0.3
+      #   with:
+      #     butlerApiKey: ${{ secrets.BUTLER_KEY }}
+      #     gameData: ./build/win/win.zip
+      #     itchUsername: ${{ secrets.ITCH_USER_NAME }}
+      #     itchGameId: ${{ secrets.ITCH_GAME_ID }}
+      #     buildChannel: windows
